@@ -58,3 +58,5 @@ Wishlist
 - Individual layout, view, sort, and filter settings for folders.
 - Choose location of new subscriptions (in sheet?).
 - Growl notifications for individual feeds.
+- Enable flagging of articles in unified view (with contextual menu?).
+- Preference to expire unread articles as well as read articles.
